syntax = "proto3";
package training;
import "commonForm.proto";
message MenuQueryReq {
  //类型 所有：0   某个pid:1   某个group : 2 (需要grpname)
  int32 Type = 1;
  // 组名
  string GroupName = 2;
  // 父级id
  int64  Pid = 3;
  // 自身id
  int64  Mid  = 4;
  string  Domain = 5;

}

//Menu   single
message MenuRes {
  int64   Id     = 1;
  string  Name   = 2;
  string  Path    = 3;
  string  Component    = 4;
  string  Redirect    = 5;
  bool    Hidden     = 6;
  int64   Pid         = 7;
  int32     Sort        = 8;
  int32     Status      = 9;
  int32     Level       = 10;
  bool    IsLeaf      = 11;
  MenuMata  Meta      = 12;
  repeated MenuRes Children = 13;
  string    NameCn   = 14;
  string    Domain    = 15;
  string    GroupName    = 16;
  int32      Version       = 17;
  bool  HiddenBreadcrumb  = 18;
  bool  Fullpage  = 19;
  string      Active = 20;
  string    Color  = 21;
  string    Tag  = 22;

  repeated  MenuApiItem  ApiList = 23;
  bool      ApiUpdated = 24;
}

//MenuMata
message MenuMata {
  string      Title    = 1;
  string      Icon     = 2;
  bool        NoCache  = 3;
  string      Type = 4;
}

message MenuListRes {
  repeated  MenuRes  Menus = 1;
  int64      Total        = 2;
}

message MenuApiItem{
  int64   Id     = 1;
  string  Name   = 2;
  string  Url    = 3;
}

message MenuHandleReq {
  Action Action = 1;
  MenuRes  Menu = 2;
  int64    Operator = 3;
  // 批量移除
  repeated int64  MenuIds = 4;
}

message UserAuthMenuListReq {
  // 角色，为便于扩展，此处接收数组，实际只有1条角色
  repeated  string  Roles  =  1;
  //  附加权限
  repeated  string  Perms  = 2;
  string        Domain   = 3;
  int64        Usid   = 4;
  int32        UserType  =5;
}

message MenuResBindReq {
  Action Action = 1;
  //菜单
  int64     MenuId      =2;
  //资源id s
  repeated int64  ResIds  = 3;
  int64     Usid    = 4;
  string    Ip      = 5;
  int64    Operator = 6;
}

//根据菜单列表，取得相应的resource
message MenuResourceReq {
  repeated  int64  MenuIds  = 1;
  string   Domain = 2;

}
